--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "svelte": "^3.1.0"
   },
   "dependencies": {
+    "es6-dynamic-template": "^2.0.0",
     "express": "^4.17.1",
     "node-fetch": "^2.6.0"
   },
